[gd_scene load_steps=3 format=3 uid="uid://bwyv3npu3jfpg"]

[ext_resource type="Script" uid="uid://bx6pplfd05xvy" path="res://scripts/detection_component.gd" id="1_dvnaf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dvnaf"]
radius = 96.0

[node name="DetectionComponent" type="Node2D"]
script = ExtResource("1_dvnaf")

[node name="ViewCone" type="Area2D" parent="." groups=["ViewCone"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ViewCone"]
build_mode = 1
polygon = PackedVector2Array(0, 0, 212.132, -212.132, 228.122, -194.834, 242.705, -176.336, 255.792, -156.75, 267.302, -136.197, 277.164, -114.805, 285.317, -92.7051, 291.711, -70.0336, 296.307, -46.9303, 299.075, -23.5377, 300, 0, 299.075, 23.5377, 296.307, 46.9303, 291.711, 70.0336, 285.317, 92.7051, 277.164, 114.805, 267.302, 136.197, 255.792, 156.75, 242.705, 176.336, 228.122, 194.834, 212.132, 212.132)

[node name="ProximityArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProximityArea"]
shape = SubResource("CircleShape2D_dvnaf")
debug_color = Color(0, 0.6, 0.701961, 0.0784314)

[connection signal="area_entered" from="ViewCone" to="." method="view_cone_detected"]
[connection signal="area_exited" from="ViewCone" to="." method="view_cone_no_longer_detected"]
[connection signal="area_entered" from="ProximityArea" to="." method="proximity_detected"]
[connection signal="area_exited" from="ProximityArea" to="." method="proximity_no_longer_detected"]
